# ipavoice

./: CLAUDE.md  DEVLOG.md  LICENSE  pyproject.toml
cluster/: README.md  setup.sh  sync_data.sh  train.sbatch
demo/: DEPLOY.md  README.md  app.py  requirements.txt
docs/: TRAINING_DATA_REPORT.json  TRAINING_DATA_REPORT.md  mfa_integration_plan.md
ipavoice/: synthesize.py  train.py
processing/: database.py  segmenter.py
scraper/: downloader.py  index_parser.py  language_parser.py  run.py  wordlist_parser.py
scripts/: generate_data_report.py  investigate_missing_entries.py  ipa_token_stats.py  monitor_training.py  training_report.py
training/: config.py  extract_durations.py  ipa_tokenizer.py  mfa_align.py  mfa_corpus.py  preprocess.py  preprocess_cv.py  synthesize.py  train.py  vits_duration_supervised.py
