[project]
name = "ipavoice"
version = "0.1.0"
description = "UCLA Phonetics Lab Archive scraper for IPA-to-speech training data"
requires-python = ">=3.10"
license = "CC-BY-NC-2.0"
dependencies = [
    "requests",
    "beautifulsoup4",
    "lxml",
    "pydub",
    "tqdm",
    "coqui-tts",
    "librosa",
    "soundfile",
    "regex",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers<5.0.0",
    "torchcodec>=0.10.0",
]

[project.scripts]
ipavoice = "scraper.run:main"
